--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Countries"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ThirdFragmentActivity"></activity>
-        <activity android:name=".DetailedCountryActivity" />
+        <activity android:name=".BetActivity"></activity>
+        <activity android:name=".DetailedActivity2" />
+        <activity android:name=".ThirdFragmentActivity" />
+        <activity android:name=".DetailedActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
