--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.countries">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Countries"
         android:usesCleartextTraffic="true">
-        <activity android:name=".BetActivity"></activity>
+        <activity android:name=".FinalLoss"></activity>
+        <activity android:name=".FinalWin" />
+        <activity android:name=".BetActivity" />
         <activity android:name=".DetailedActivity2" />
         <activity android:name=".ThirdFragmentActivity" />
         <activity android:name=".DetailedActivity" />
