--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,16 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
+
+    def lifecycle_version = "2.1.0"
+
+// ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    def room_version = "2.2.1"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+
 }
